--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -10,13 +10,20 @@
 </head>
 <body>
     <div class="container">
-        <form class="text-field" action="/" method="post">
-            <label class="text-field__label" for="search">Найти заказ</label>
-            <div class="text-field__group">
-                <input class="text-field__input" type="search" id="search" name="search">
-                <button class="text-field__btn" type="submit">Найти</button>
-            </div>
-        </form>
+        <div class="form_wrapper">
+            <form class="text-field" action="/" method="post">
+                <label class="text-field__label" for="search">Найти заказ</label>
+                <div class="text-field__group">
+                    <input class="text-field__input" type="search" id="search" name="search">
+                    <button class="text-field__btn" type="submit">Найти</button>
+                </div>
+            </form>
+        </div>
+        <div>
+            {{ if . }}
+                {{ . }}
+            {{ end }}
+        </div>
     </div>
 </body>
 </html>
